--- a/src/widgets/footer/index.module.scss
+++ b/src/widgets/footer/index.module.scss
@@ -5,7 +5,7 @@
 
 .wrapper {
   max-width: 120rem;
-  padding: 2rem 0 2rem;
+  padding: 2rem;
   margin: 0 auto;
 }
 
