--- a/src/widgets/header/index.module.scss
+++ b/src/widgets/header/index.module.scss
@@ -3,6 +3,7 @@
 .header {
   background-color: var(--main-bg);
   border-bottom: 0.2rem solid var(--dark-xl);
+  padding: 0 2rem;
 }
 
 .wrapper {
